--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <script>
     // --- SET YOUR RAILWAY URL HERE ---
-    const API_URL = "postgresql://postgres:hAWJlpCliLxvvjTkcIHbJBCvSrQIIRCb@maglev.proxy.rlwy.net:36104/railway"; 
+    const API_URL = "postgresql://postgres:hAWJlpCliLxvvjTkcIHbJBCvSrQIIRCb@maglev.pro.rlwy.net:36104/railway"; 
 
     const elInput = document.getElementById('editing');
     const elOutput = document.getElementById('highlighting');
